Fix Vercel deployment - use direct API file approach

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "dist/app.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "dist/app.js"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/profiles.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/profiles",
+      "dest": "api/profiles.js"
+    }
+  ]
+}
   
