Refactor Vercel configuration and remove unused files. Updated vercel.json to use a direct build approach with src/app.ts, deleted .vercelignore and API profiles.js, and removed generated dist files.

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,18 @@
 
 {
-  "version": 2,
-  "routes": [
-    {
-      "src": "/profiles",
-      "dest": "api/profiles.js"
-    }
-  ]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "src/app.ts",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "src/app.ts"
+      }
+    ]
+  }
+  
   
