--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.75.1",
+    "@types/multer": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
   },
